--- a/BioArchLinux/free-delta/PKGBUILD
+++ b/BioArchLinux/free-delta/PKGBUILD
@@ -14,7 +14,7 @@ depends=(gtk2 classic-delta)
 makedepends=(lazarus imagemagick git)
 source=("git+https://github.com/maurobio/freedelta.git#tag=v$pkgver"
 	"Free_Delta_Editor.desktop"
-	"fde.patch"
+	"https://github.com/maurobio/freedelta/compare/main...starsareintherose:freedelta:${pkgver}.patch"
 	"https://packages.lazarus-ide.org/SynFacilSyn.zip"
 	"https://packages.lazarus-ide.org/HtmlViewer.zip"
 	"https://packages.lazarus-ide.org/HistoryFiles.zip"
@@ -28,7 +28,7 @@ sha256sums=('SKIP'
             'SKIP')
 prepare () {
   cd $srcdir/freedelta
-  patch -N -i ${srcdir}/fde.patch
+  patch -N -i ${srcdir}/${pkgver}.patch
 }
 build () {
   # depends
