--- a/BioArchLinux/free-delta/PKGBUILD
+++ b/BioArchLinux/free-delta/PKGBUILD
@@ -14,7 +14,7 @@ depends=(gtk2 classic-delta)
 makedepends=(lazarus imagemagick git)
 source=("git+https://github.com/maurobio/freedelta.git#tag=v$pkgver"
 	"Free_Delta_Editor.desktop"
-	"https://github.com/maurobio/freedelta/compare/main...starsareintherose:freedelta:${pkgver}.patch"
+	"${pkgver}.patch::https://github.com/maurobio/freedelta/compare/main...starsareintherose:freedelta:${pkgver}.patch"
 	"https://packages.lazarus-ide.org/SynFacilSyn.zip"
 	"https://packages.lazarus-ide.org/HtmlViewer.zip"
 	"https://packages.lazarus-ide.org/HistoryFiles.zip"
