--- a/BioArchLinux/perl-moose/PKGBUILD
+++ b/BioArchLinux/perl-moose/PKGBUILD
@@ -1,20 +1,30 @@
+
 # Maintainer : Bipin Kumar <kbipinkumar@pm.me>
 # Contributor: Ordoban <dirk.langer@vvovgonik.de>
 # Generator  : CPANPLUS::Dist::Arch 1.32
 
 pkgname='perl-moose'
 pkgver='2.2201'
-pkgrel='1'
+pkgrel='3'
 pkgdesc="A postmodern object system for Perl 5"
 arch=('any')
 license=('PerlArtistic' 'GPL')
 options=('!emptydirs')
 depends=('perl-cpan-meta-check>=0.011' 'perl-class-load>=0.09' 'perl-class-load-xs>=0.01' 'perl-data-optlist>=0.107' 'perl-devel-globaldestruction>=0' 'perl-devel-overloadinfo>=0.005' 'perl-devel-stacktrace>=2.03' 'perl-dist-checkconflicts>=0.02' 'perl-eval-closure>=0.04' 'perl-mro-compat>=0.05' 'perl-module-runtime>=0.014' 'perl-module-runtime-conflicts>=0.002' 'perl-package-deprecationmanager>=0.11' 'perl-package-stash>=0.32' 'perl-package-stash-xs>=0.24' 'perl-params-util>=1.00' 'perl-sub-exporter>=0.980' 'perl-try-tiny>=0.17')
 makedepends=()
-checkdepends=('perl-test-cleannamespaces>=0.13' 'perl-test-fatal>=0.001' 'perl-test-requires>=0.05')
+checkdepends=(
+              'perl-test-memory-cycle'
+              'perl-test-leaktrace' 
+              'perl-test-cleannamespaces>=0.13'
+              'perl-test-fatal>=0.001'
+              'perl-test-requires>=0.05'
+              'perl-test-output'
+              'perl-padwalker'
+              'perl-super'
+              'perl-datetime'
+              )
 url='https://metacpan.org/dist/Moose'
-source=("http://search.cpan.org/CPAN/authors/id/E/ET/ETHER/Moose-$pkgver.tar.gz")
-md5sums=('5ff10f1fcefc47ee8340375fb67b42a2')
+source=("http://search.cpan.org/CPAN/authors/id/E/ET/ETHER/Moose-${pkgver}.tar.gz")
 sha512sums=('71a22aab5b5de7de1e1a2df30e7526eb2913245733de9196328a6eaa9ada1699e74b58d5d3f9edbea6ddc35baf7febf0ebcce5f1210fc8777d6091acbac14260')
 _distdir="Moose-$pkgver"
 
