perl-lwp-useragent-determined: use cpan source in lilac.yaml

--- a/BioArchLinux/perl-lwp-useragent-determined/lilac.yaml
+++ b/BioArchLinux/perl-lwp-useragent-determined/lilac.yaml
@@ -3,7 +3,6 @@ maintainers:
   - github: kbipinkumar
     email: kbipinkumar@pm.me
 update_on:
-  - regex: LWP-UserAgent-Determined-(\d+.\d+)
-    source: regex
-    url: https://metacpan.org/dist/LWP-UserAgent-Determined
+  - source: "cpan"
+    cpan: LWP-UserAgent-Determined
   - alias: perl
