--- a/BioArchLinux/perl-algorithm-c3/lilac.yaml
+++ b/BioArchLinux/perl-algorithm-c3/lilac.yaml
@@ -1,4 +1,9 @@
 build_prefix: extra-x86_64
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
+  run_cmd(['updpkgsums'])
+post_build_script: |
+  git_pkgbuild_commit()
 maintainers:
   - github: kbipinkumar
     email: kbipinkumar@pm.me
