--- a/BioArchLinux/perl-lwp-useragent-determined/lilac.yaml
+++ b/BioArchLinux/perl-lwp-useragent-determined/lilac.yaml
@@ -2,7 +2,13 @@ build_prefix: extra-x86_64
 maintainers:
   - github: kbipinkumar
     email: kbipinkumar@pm.me
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
+  run_cmd(['updpkgsums'])
+post_build_script: |
+  git_pkgbuild_commit()
 update_on:
   - source: "cpan"
     cpan: LWP-UserAgent-Determined
   - alias: perl
+
