--- a/BioArchLinux/perl-module-runtime-conflicts/lilac.yaml
+++ b/BioArchLinux/perl-module-runtime-conflicts/lilac.yaml
@@ -2,8 +2,14 @@ build_prefix: extra-x86_64
 maintainers:
   - github: kbipinkumar
     email: kbipinkumar@pm.me
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver.lstrip('v'))
+  run_cmd(['updpkgsums'])
+post_build_script: |
+  git_pkgbuild_commit()
 update_on:
   - source: "cpan"
     cpan: Module-Runtime-Conflicts
   - alias: perl
+
   
