spaln: use github source for patch

--- a/BioArchLinux/spaln/PKGBUILD
+++ b/BioArchLinux/spaln/PKGBUILD
@@ -11,11 +11,11 @@ depends=('zlib' 'perl' 'glibc' 'gcc-libs')
 source=("${pkgname}-${pkgver}.tar.gz::https://github.com/ogotoh/spaln/archive/refs/tags/ver${pkgver}.tar.gz"
         "spaln.sh"
         "spaln.csh"
-        "harden.patch")
+        "harden.patch::https://patch-diff.githubusercontent.com/raw/ogotoh/spaln/pull/65.diff")
 sha256sums=('830e02617c90cd9f245b406e29d4ab03fe29712832eff837ce24431db14a5555'
             '9a0b4fa808ab2d88d277cbe5d49b6ed02eff768c45409cba70d4132230ca676d'
             '9b77f3a31dd260703a8cefc6416794fc0ddb04999cd5078be9c5a287664561d1'
-            'b369eb6f01b17f5f165660a464033595afde8e222084d3deb9b77763deaa4aa5')
+            '689b5e7166a03dcb8c62d47bc526bf3df6aa085dbbfd4fb215b4dcb6518ca63b')
 
 prepare() {
   cd ${pkgname}-ver${pkgver}/src
