--- a/BioArchLinux/r-dapar/lilac.yaml
+++ b/BioArchLinux/r-dapar/lilac.yaml
@@ -1,15 +1,56 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 repo_depends:
+- r-annotationdbi
+- r-apcluster
 - r-biobase
+- r-clusterprofiler
+- r-cp4p
 - r-dapardata
+- r-dendextend
+- r-diptest
+- r-doparallel
+- r-dplyr
+- r-factoextra
+- r-factominer
+- r-forcats
 - r-foreach
+- r-ggplot2
+- r-gplots
+- r-graph
 - r-highcharter
+- r-igraph
+- r-imp4p
+- r-impute
+- r-knitr
+- r-limma
+- r-lme4
+- r-mfuzz
 - r-msnbase
+- r-multcomp
+- r-norm
+- r-openxlsx
+- r-org.sc.sgd.db
+- r-preprocesscore
+- r-purrr
+- r-rcolorbrewer
+- r-readxl
+- r-reshape2
+- r-scales
+- r-stringr
+- r-tibble
+- r-tidyr
+- r-tidyverse
+- r-vioplot
+- r-visnetwork
+- r-vsn
+repo_makedepends:
+- r-testthat
 update_on:
-- regex: DAPAR_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/DAPAR
+- source: rpkgs
+  pkgname: DAPAR
+  repo: bioc
+  md5: true
 - alias: r
