--- a/BioArchLinux/tiledb/PKGBUILD
+++ b/BioArchLinux/tiledb/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Morteza NourelahiAlamdari <m@0t1.me>
 
 pkgname=tiledb
-pkgver=2.17.4
-pkgrel=2
+pkgver=2.18.0
+pkgrel=0
 pkgdesc="The Universal Storage Engine"
 arch=(x86_64)
 url="https://tiledb.com"
@@ -26,8 +26,8 @@ makedepends=(
 )
 source=("$pkgname-$pkgver.tar.gz::https://github.com/TileDB-Inc/TileDB/archive/$pkgver.tar.gz"
         "system-libs.patch")
-sha256sums=('7ef1c88415045eda28666f7eceb75146c49443b1eee162aa28c3b7e27496b769'
-            '47241a8b29d0094454be6b21fb5942bdb757e6f1cc72e4598d18eba405f15fc4')
+sha256sums=('c5cc459f18bae030631830a260d8fc54690ed2887e6b64dac70e3dfc29f55691'
+            'f1507699a21b988876310aa9232f959a9e0311806344752aca0d41fd518fedc3')
 
 prepare() {
   cd "TileDB-$pkgver"
@@ -41,6 +41,7 @@ build() {
       -DCMAKE_INSTALL_PREFIX=/usr \
       -DTILEDB_SERIALIZATION=ON \
       -DTILEDB_TESTS=OFF \
+      -DTILEDB_VCPKG=OFF \
       -DTILEDB_WEBP=OFF \
       -Wno-dev
   cmake --build build
