--- a/BioArchLinux/r-metavolcanor/lilac.yaml
+++ b/BioArchLinux/r-metavolcanor/lilac.yaml
@@ -17,8 +17,8 @@ repo_depends:
 repo_makedepends:
 - r-testthat
 update_on:
-- source: rpkgs
-  pkgname: MetaVolcanoR
-  repo: bioc
-  md5: true
+- source: manual
+  manual: 1.14.0#697e849a45f3ceae9ff730fc7717d6ca
 - alias: r
+- source: manual
+  manual: 1
