r-xml: fix build, use metadata checks

--- a/BioArchLinux/r-xml/lilac.yaml
+++ b/BioArchLinux/r-xml/lilac.yaml
@@ -1,9 +1,15 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: XML_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=XML
+- source: rpkgs
+  pkgname: XML
+  repo: cran
+  md5: true
 - alias: r
+- source: alpm
+  alpm: libxml2
+  repo: core
+  provided: libxml2.so
+  strip_release: true
