r-*: use SPDX license identifier for "LGPL" R packages
This applies only to packages that have specified exactly
"LGPL" as the license in DESCRIPTION.

--- a/BioArchLinux/r-hgu95av2cdf/PKGBUILD
+++ b/BioArchLinux/r-hgu95av2cdf/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=4
 pkgdesc="hgu95av2cdf"
 arch=(any)
 url="https://bioconductor.org/packages/${_pkgname}"
-license=(LGPL)
+license=('LGPL-2.0-or-later')
 depends=(
   r-annotationdbi
 )
