--- a/BioArchLinux/r-r2html/lilac.yaml
+++ b/BioArchLinux/r-r2html/lilac.yaml
@@ -1,9 +1,10 @@
 build_prefix: extra-x86_64
 maintainers:
-- github: starsareintherose
-  email: kuoi@bioarchlinux.org
+- github: pekkarr
+  email: pekkarr@protonmail.com
 update_on:
-- regex: R2HTML_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=R2HTML
+- source: rpkgs
+  pkgname: R2HTML
+  repo: cran
+  md5: true
 - alias: r
