--- a/BioArchLinux/r-ellipsis/lilac.yaml
+++ b/BioArchLinux/r-ellipsis/lilac.yaml
@@ -4,9 +4,13 @@ maintainers:
   email: pekkarr@protonmail.com
 repo_depends:
 - r-rlang
+repo_makedepends:
+- r-testthat
 update_on:
 - source: rpkgs
   pkgname: ellipsis
   repo: cran
   md5: true
 - alias: r
+- source: manual
+  manual: 1
