--- a/BioArchLinux/r-xml2/lilac.yaml
+++ b/BioArchLinux/r-xml2/lilac.yaml
@@ -2,8 +2,10 @@ build_prefix: extra-x86_64
 maintainers:
 - github: pekkarr
   email: pekkarr@protonmail.com
+repo_depends:
+- r-cli
+- r-rlang
 repo_makedepends:
-- r-mockery
 - r-testthat
 update_on:
 - source: rpkgs
