--- a/BioArchLinux/r-webfakes/PKGBUILD
+++ b/BioArchLinux/r-webfakes/PKGBUILD
@@ -2,10 +2,10 @@
 # Contributor: peippo <christoph+aur@christophfink.com>
 
 _pkgname=webfakes
-_pkgver=1.2.1
+_pkgver=1.3.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
-pkgrel=3
+pkgrel=0
 pkgdesc="Fake Web Apps for HTTP Testing"
 arch=(x86_64)
 url="https://cran.r-project.org/package=${_pkgname}"
@@ -23,14 +23,15 @@ optdepends=(
   r-httpuv
   r-httr
   r-jsonlite
+  r-processx
   r-testthat
   r-withr
   r-xml2
   r-zip
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-md5sums=('5ae9e4bb401ec6851c49a9b881968d65')
-sha256sums=('6a42d174023db2e5080a0b9e2f65a464ad373332ee0f2263ebf4859682dcff91')
+md5sums=('0d5a6f8dff6c26606b48f267063974a5')
+sha256sums=('26ea0e0e7c6bef082b2838f224636e9710fe9d516a96731b2767df54cbd27ef0')
 
 build() {
   mkdir -p build
