r-icsoutlier: fix optdepends

--- a/BioArchLinux/r-icsoutlier/lilac.yaml
+++ b/BioArchLinux/r-icsoutlier/lilac.yaml
@@ -6,6 +6,8 @@ repo_depends:
 - r-ics
 - r-moments
 - r-mvtnorm
+repo_makedepends:
+- r-testthat
 update_on:
 - source: rpkgs
   pkgname: ICSOutlier
