r-maaslin2: use double quotes for pkgdesc

--- a/BioArchLinux/r-maaslin2/PKGBUILD
+++ b/BioArchLinux/r-maaslin2/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=1.16.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='"Multivariable Association Discovery in Population-scale Meta-omics Studies"'
+pkgdesc="\"Multivariable Association Discovery in Population-scale Meta-omics Studies\""
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(MIT)
