r-*: avoid repeating package name in pkgdesc

--- a/BioArchLinux/r-biodbnci/PKGBUILD
+++ b/BioArchLinux/r-biodbnci/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.6.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="biodbNci, a library for connecting to biodbNci, a library for connecting to the National Cancer Institute (USA) CACTUS Database"
+pkgdesc="a library for connecting to the National Cancer Institute (USA) CACTUS Database"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(AGPL3)
