--- a/BioArchLinux/r-ccimpute/PKGBUILD
+++ b/BioArchLinux/r-ccimpute/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.4.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="ccImpute: an accurate and scalable consensus clustering based approach to impute dropout events in the single-cell RNA-seq data (https://doi.org/10.1186/s12859-022-04814-8)"
+pkgdesc="an accurate and scalable consensus clustering based approach to impute dropout events in the single-cell RNA-seq data"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
