--- a/BioArchLinux/r-compspot/PKGBUILD
+++ b/BioArchLinux/r-compspot/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.0.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="compSPOT: Tool for identifying and comparing significantly mutated genomic hotspots"
+pkgdesc="Tool for identifying and comparing significantly mutated genomic hotspots"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
