--- a/BioArchLinux/r-featseekr/PKGBUILD
+++ b/BioArchLinux/r-featseekr/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="FeatSeekR an R package for unsupervised feature selection"
+pkgdesc="an R package for unsupervised feature selection"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
