--- a/BioArchLinux/r-hicool/PKGBUILD
+++ b/BioArchLinux/r-hicool/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="HiCool"
+pkgdesc="Processing Hi-C raw data within R"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(MIT)
