--- a/BioArchLinux/r-isobayes/PKGBUILD
+++ b/BioArchLinux/r-isobayes/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.0.1
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="IsoBayes: Single Isoform protein inference Method via Bayesian Analyses"
+pkgdesc="Single Isoform protein inference Method via Bayesian Analyses"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
