--- a/BioArchLinux/r-mariner/PKGBUILD
+++ b/BioArchLinux/r-mariner/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="Mariner: Explore the Hi-Cs"
+pkgdesc="Explore the Hi-Cs"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
