--- a/BioArchLinux/r-mbqtl/PKGBUILD
+++ b/BioArchLinux/r-mbqtl/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="mbQTL: A package for SNP-Taxa mGWAS analysis"
+pkgdesc="A package for SNP-Taxa mGWAS analysis"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(MIT)
