--- a/BioArchLinux/r-msquality/PKGBUILD
+++ b/BioArchLinux/r-msquality/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="MsQuality - Quality metric calculation from Spectra and MsExperiment objects"
+pkgdesc="Quality metric calculation from Spectra and MsExperiment objects"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
