--- a/BioArchLinux/r-multiwgcna/PKGBUILD
+++ b/BioArchLinux/r-multiwgcna/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.0.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="multiWGCNA"
+pkgdesc="An R package for deeping mining gene co-expression networks in multi-trait expression data"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
