--- a/BioArchLinux/r-regionereloaded/PKGBUILD
+++ b/BioArchLinux/r-regionereloaded/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.4.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="RegioneReloaded: Multiple Association for Genomic Region Sets"
+pkgdesc="Multiple Association for Genomic Region Sets"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
