--- a/BioArchLinux/r-retrofit/PKGBUILD
+++ b/BioArchLinux/r-retrofit/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="RETROFIT: Reference-free deconvolution of cell mixtures in spatial transcriptomics"
+pkgdesc="Reference-free deconvolution of cell mixtures in spatial transcriptomics"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
