--- a/BioArchLinux/r-sgcp/PKGBUILD
+++ b/BioArchLinux/r-sgcp/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="SGCP: A semi-supervised pipeline for gene clustering using self-training approach in gene co-expression networks"
+pkgdesc="A semi-supervised pipeline for gene clustering using self-training approach in gene co-expression networks"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
