--- a/BioArchLinux/r-adverscarial/PKGBUILD
+++ b/BioArchLinux/r-adverscarial/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.0.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="adverSCarial, generate and analyze the vulnerability of scRNA-seq classifiers to adversarial attacks"
+pkgdesc="generate and analyze the vulnerability of scRNA-seq classifiers to adversarial attacks"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(MIT)
