--- a/BioArchLinux/r-biodb/PKGBUILD
+++ b/BioArchLinux/r-biodb/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=1.10.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc="biodb, a library and a development framework for connecting to chemical and biological databases"
+pkgdesc="a library and a development framework for connecting to chemical and biological databases"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(AGPL3)
