--- a/BioArchLinux/r-biodbhmdb/PKGBUILD
+++ b/BioArchLinux/r-biodbhmdb/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=1.8.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="biodbHmdb, a library for connecting to the HMDB Database"
+pkgdesc="a library for connecting to the HMDB Database"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(AGPL3)
