--- a/BioArchLinux/r-despace/PKGBUILD
+++ b/BioArchLinux/r-despace/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="DESpace: a framework to discover spatially variable genes"
+pkgdesc="a framework to discover spatially variable genes"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
