--- a/BioArchLinux/r-epimix/PKGBUILD
+++ b/BioArchLinux/r-epimix/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.4.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="EpiMix: an integrative tool for the population-level analysis of DNA methylation"
+pkgdesc="an integrative tool for the population-level analysis of DNA methylation"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
