--- a/BioArchLinux/r-flowcore/PKGBUILD
+++ b/BioArchLinux/r-flowcore/PKGBUILD
@@ -7,7 +7,7 @@ _pkgver=2.14.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc="flowCore: Basic structures for flow cytometry data"
+pkgdesc="Basic structures for flow cytometry data"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
