--- a/BioArchLinux/r-gdrtestdata/PKGBUILD
+++ b/BioArchLinux/r-gdrtestdata/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.0.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="gDRtestData - R data package with testing dose reponse data"
+pkgdesc="R data package with testing dose reponse data"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
