--- a/BioArchLinux/r-geoexplorer/PKGBUILD
+++ b/BioArchLinux/r-geoexplorer/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=1.8.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="GEOexplorer: a webserver for gene expression analysis and visualisation"
+pkgdesc="a webserver for gene expression analysis and visualisation"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
