--- a/BioArchLinux/r-granie/PKGBUILD
+++ b/BioArchLinux/r-granie/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.6.1
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="GRaNIE: Reconstruction cell type specific gene regulatory networks including enhancers using chromatin accessibility and RNA-seq data"
+pkgdesc="Reconstruction cell type specific gene regulatory networks including enhancers using chromatin accessibility and RNA-seq data"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
