--- a/BioArchLinux/r-hgu95av2cdf/PKGBUILD
+++ b/BioArchLinux/r-hgu95av2cdf/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=2.18.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=5
-pkgdesc="hgu95av2cdf"
+pkgdesc="A package containing an environment representing the HG_U95Av2.CDF file"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=('LGPL-2.0-or-later')
