--- a/BioArchLinux/r-micsqtl/PKGBUILD
+++ b/BioArchLinux/r-micsqtl/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.0.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="MICSQTL (Multi-omic deconvolution, Integration and Cell-type-specific Quantitative Trait Loci)"
+pkgdesc="Multi-omic deconvolution, Integration and Cell-type-specific Quantitative Trait Loci"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
