--- a/BioArchLinux/r-resolve/PKGBUILD
+++ b/BioArchLinux/r-resolve/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.4.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="RESOLVE: An R package for the efficient analysis of mutational signatures from cancer genomes"
+pkgdesc="An R package for the efficient analysis of mutational signatures from cancer genomes"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Apache)
