--- a/BioArchLinux/r-rolde/PKGBUILD
+++ b/BioArchLinux/r-rolde/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.6.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="RolDE: Robust longitudinal Differential Expression"
+pkgdesc="Robust longitudinal Differential Expression"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
