--- a/BioArchLinux/r-scfeatures/PKGBUILD
+++ b/BioArchLinux/r-scfeatures/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="scFeatures: Multi-view representations of single-cell and spatial data for disease outcome prediction"
+pkgdesc="Multi-view representations of single-cell and spatial data for disease outcome prediction"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
