--- a/BioArchLinux/r-scifer/PKGBUILD
+++ b/BioArchLinux/r-scifer/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.4.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="Scifer: Single-Cell Immunoglobulin Filtering of Sanger Sequences"
+pkgdesc="Single-Cell Immunoglobulin Filtering of Sanger Sequences"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(MIT)
