--- a/BioArchLinux/r-spatialheatmap/PKGBUILD
+++ b/BioArchLinux/r-spatialheatmap/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=2.8.2
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="spatialHeatmap"
+pkgdesc="Creating spatial heatmaps from R and Shiny"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
