--- a/BioArchLinux/r-spatiallibd/PKGBUILD
+++ b/BioArchLinux/r-spatiallibd/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.14.1
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="spatialLIBD: an R/Bioconductor package to visualize spatially-resolved transcriptomics data"
+pkgdesc="an R/Bioconductor package to visualize spatially-resolved transcriptomics data"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(Artistic2.0)
