--- a/BioArchLinux/r-stjoincount/PKGBUILD
+++ b/BioArchLinux/r-stjoincount/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.4.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="stJoincount - Join count statistic for quantifying spatial correlation between clusters"
+pkgdesc="Join count statistic for quantifying spatial correlation between clusters"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(MIT)
