--- a/BioArchLinux/r-tximportdata/PKGBUILD
+++ b/BioArchLinux/r-tximportdata/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.30.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="tximportData"
+pkgdesc="provides the output of running various transcript abundance quantifiers on a set of 6 RNA-seq samples from the GEUVADIS project"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL)
