r-*: strip dot from the end of pkgdesc

--- a/BioArchLinux/r-biodbexpasy/PKGBUILD
+++ b/BioArchLinux/r-biodbexpasy/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.6.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc="a library for connecting to Expasy ENZYME database."
+pkgdesc="a library for connecting to Expasy ENZYME database"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(AGPL3)
