--- a/BioArchLinux/r-flowworkspace/PKGBUILD
+++ b/BioArchLinux/r-flowworkspace/PKGBUILD
@@ -6,7 +6,7 @@ _pkgver=4.14.1
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="Infrastructure for representing and interacting with gated and ungated cytometry data sets."
+pkgdesc="Infrastructure for representing and interacting with gated and ungated cytometry data sets"
 arch=(x86_64)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(AGPL3)
