--- a/BioArchLinux/r-biodbncbi/PKGBUILD
+++ b/BioArchLinux/r-biodbncbi/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.6.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=3
-pkgdesc="a library for connecting to NCBI Databases."
+pkgdesc="a library for connecting to NCBI Databases"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(AGPL3)
