--- a/BioArchLinux/r-flowworkspacedata/PKGBUILD
+++ b/BioArchLinux/r-flowworkspacedata/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=3.14.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc="A data package containing two flowJo, one diva xml workspace and the associated fcs files as well as three GatingSets for testing the flowWorkspace, openCyto and CytoML packages."
+pkgdesc="A data package containing two flowJo, one diva xml workspace and the associated fcs files as well as three GatingSets for testing the flowWorkspace, openCyto and CytoML packages"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL2)
