--- a/BioArchLinux/r-rificomparative/PKGBUILD
+++ b/BioArchLinux/r-rificomparative/PKGBUILD
@@ -5,7 +5,7 @@ _pkgver=1.2.0
 pkgname=r-${_pkgname,,}
 pkgver=${_pkgver//-/.}
 pkgrel=2
-pkgdesc="'rifiComparative' compares the output of rifi from two different conditions."
+pkgdesc="'rifiComparative' compares the output of rifi from two different conditions"
 arch=(any)
 url="https://bioconductor.org/packages/$_pkgname"
 license=(GPL3)
