--- a/BioArchLinux/r-data.table/PKGBUILD
+++ b/BioArchLinux/r-data.table/PKGBUILD
@@ -1,15 +1,14 @@
-# system requirements: zlib
 # Maintainer: Guoyi Zhang <guoyizhang at malacology dot net>
 
 _pkgname=data.table
 _pkgver=1.14.10
 pkgname=r-${_pkgname,,}
-pkgver=1.14.10
+pkgver=${_pkgver//-/.}
 pkgrel=1
-pkgdesc='Extension of `data.frame`'
-arch=('x86_64')
-url="https://cran.r-project.org/package=${_pkgname}"
-license=('MPL2')
+pkgdesc="Extension of \`data.frame\`"
+arch=(x86_64)
+url="https://cran.r-project.org/package=$_pkgname"
+license=(MPL2)
 depends=(
   r
   zlib
@@ -27,14 +26,15 @@ optdepends=(
   r-zoo
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('014b41eb71a8ddad504baeaa3a2fbbf03406783f00f3adcce48567692978627e')
+md5sums=('21b7b8bc86c1748ee57f63fa568d4fd7')
+b2sums=('dd45752406be9c01934f6a98c83ca435f9595acde690c69d9b2b1c978d73539c11324ad5b4ab2951c31a65706611235e2ff1838154ea647b2a869d185e26fc71')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir build
+  R CMD INSTALL -l build "$_pkgname"
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
