--- a/BioArchLinux/r-data.table/lilac.yaml
+++ b/BioArchLinux/r-data.table/lilac.yaml
@@ -3,7 +3,13 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: data.table_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=data.table
+- source: rpkgs
+  pkgname: data.table
+  repo: cran
+  md5: true
 - alias: r
+- source: alpm
+  alpm: zlib
+  repo: core
+  provided: libz.so
+  strip_release: true
