--- a/BioArchLinux/r-rcolorbrewer/PKGBUILD
+++ b/BioArchLinux/r-rcolorbrewer/PKGBUILD
@@ -3,24 +3,25 @@
 _pkgname=RColorBrewer
 _pkgver=1.1-3
 pkgname=r-${_pkgname,,}
-pkgver=1.1.3
+pkgver=${_pkgver//-/.}
 pkgrel=8
-pkgdesc='ColorBrewer Palettes'
-arch=('any')
-url="https://cran.r-project.org/package=${_pkgname}"
-license=('Apache')
+pkgdesc="ColorBrewer Palettes"
+arch=(any)
+url="https://cran.r-project.org/package=$_pkgname"
+license=(Apache)
 depends=(
   r
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('4f42f5423c45688b39f492c7892d93f37b4541831c8ffb140364d2bd89031ac0')
+md5sums=('9b687595bbe02a7e43fc195ba33f065c')
+b2sums=('f5d3c2ae82be0e46c1c7ca2d39ecbc63559a607d062e7ec2ad62c1cebe8327f81193edf8d7de88c1948a5e5507a290c4f1519fe9bed33792980d1526d9687c54')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir build
+  R CMD INSTALL -l build "$_pkgname"
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
