--- a/BioArchLinux/r-fastcluster/lilac.yaml
+++ b/BioArchLinux/r-fastcluster/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: fastcluster_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=fastcluster
+- source: rpkgs
+  pkgname: fastcluster
+  repo: cran
+  md5: true
 - alias: r
