r-circstats: use metadata checks

--- a/BioArchLinux/r-circstats/lilac.yaml
+++ b/BioArchLinux/r-circstats/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: CircStats_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=CircStats
+- source: rpkgs
+  pkgname: CircStats
+  repo: cran
+  md5: true
 - alias: r
