--- a/BioArchLinux/r-hwriter/PKGBUILD
+++ b/BioArchLinux/r-hwriter/PKGBUILD
@@ -3,24 +3,25 @@
 _pkgname=hwriter
 _pkgver=1.3.2.1
 pkgname=r-${_pkgname,,}
-pkgver=1.3.2.1
+pkgver=${_pkgver//-/.}
 pkgrel=8
-pkgdesc='HTML Writer - Outputs R objects in HTML format'
-arch=('any')
-url="https://cran.r-project.org/package=${_pkgname}"
-license=('LGPL')
+pkgdesc="HTML Writer - Outputs R Objects in HTML Format"
+arch=(any)
+url="https://cran.r-project.org/package=$_pkgname"
+license=('LGPL-2.1-only')
 depends=(
   r
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('ed2fa254ab27cf65d397e181339976fc3261dfb4f6b600fea8c5689620dab6f3')
+md5sums=('2d97b0dcf19b3c9d6d60840b4703453f')
+b2sums=('f0ee25ffe858169b38287bebea13d7586e1563fa5303f57cc5d335bf33ce473f03873faa9414fd67c12d3d7dea09c97485248b4b4723d7515a7fdb7a442fb2d9')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir build
+  R CMD INSTALL -l build "$_pkgname"
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
