--- a/BioArchLinux/r-snow/PKGBUILD
+++ b/BioArchLinux/r-snow/PKGBUILD
@@ -3,28 +3,28 @@
 _pkgname=snow
 _pkgver=0.4-4
 pkgname=r-${_pkgname,,}
-pkgver=0.4.4
+pkgver=${_pkgver//-/.}
 pkgrel=10
-pkgdesc='Simple Network of Workstations'
-arch=('any')
-url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+pkgdesc="Simple Network of Workstations"
+arch=(any)
+url="https://cran.r-project.org/package=$_pkgname"
+license=(GPL)
 depends=(
   r
 )
 optdepends=(
   r-rlecuyer
-  r-rmpi
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('84587f46f222a96f3e2fde10ad6ec6ddbd878f4e917cd926d632f61a87db13c9')
+md5sums=('8a6ded9cae4a175619ad1e33cc31d4b9')
+b2sums=('9b7a477e7b99064df4793de21a1092f83c27bccce5101b6900a5f2395bad108911ab2aa3e8d23dec6f5a5b18b793d75216c343b9bb74c7bee197219d8a2d030d')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir build
+  R CMD INSTALL -l build "$_pkgname"
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
