--- a/BioArchLinux/r-algdesign/lilac.yaml
+++ b/BioArchLinux/r-algdesign/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: AlgDesign_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=AlgDesign
+- source: rpkgs
+  pkgname: AlgDesign
+  repo: cran
+  md5: true
 - alias: r
