--- a/BioArchLinux/r-clue/lilac.yaml
+++ b/BioArchLinux/r-clue/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: clue_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=clue
+- source: rpkgs
+  pkgname: clue
+  repo: cran
+  md5: true
 - alias: r
