--- a/BioArchLinux/r-rjson/lilac.yaml
+++ b/BioArchLinux/r-rjson/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: rjson_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=rjson
+- source: rpkgs
+  pkgname: rjson
+  repo: cran
+  md5: true
 - alias: r
