--- a/BioArchLinux/r-tximport/lilac.yaml
+++ b/BioArchLinux/r-tximport/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: tximport_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/tximport
+- source: rpkgs
+  pkgname: tximport
+  repo: bioc
+  md5: true
 - alias: r
