--- a/BioArchLinux/r-assertthat/PKGBUILD
+++ b/BioArchLinux/r-assertthat/PKGBUILD
@@ -3,12 +3,12 @@
 _pkgname=assertthat
 _pkgver=0.2.1
 pkgname=r-${_pkgname,,}
-pkgver=0.2.1
+pkgver=${_pkgver//-/.}
 pkgrel=13
-pkgdesc='Easy Pre and Post Assertions'
-arch=('any')
-url="https://cran.r-project.org/package=${_pkgname}"
-license=('GPL')
+pkgdesc="Easy Pre and Post Assertions"
+arch=(any)
+url="https://cran.r-project.org/package=$_pkgname"
+license=(GPL3)
 depends=(
   r
 )
@@ -17,14 +17,15 @@ optdepends=(
   r-testthat
 )
 source=("https://cran.r-project.org/src/contrib/${_pkgname}_${_pkgver}.tar.gz")
-sha256sums=('85cf7fcc4753a8c86da9a6f454e46c2a58ffc70c4f47cac4d3e3bcefda2a9e9f')
+md5sums=('9f2eae3d20a9d6b40856a6fed013cb05')
+b2sums=('831657a08c7e41a4a0fdb9695b8ccaa802aeeaf1f8d7df501b9810b6a367f8c77e05a75c3345ad9042b60a2956d049b823ac673023df93b5345250d8b44124dc')
 
 build() {
-  R CMD INSTALL ${_pkgname}_${_pkgver}.tar.gz -l "${srcdir}"
+  mkdir build
+  R CMD INSTALL -l build "$_pkgname"
 }
 
 package() {
-  install -dm0755 "${pkgdir}/usr/lib/R/library"
-  cp -a --no-preserve=ownership "${_pkgname}" "${pkgdir}/usr/lib/R/library"
+  install -d "$pkgdir/usr/lib/R/library"
+  cp -a --no-preserve=ownership "build/$_pkgname" "$pkgdir/usr/lib/R/library"
 }
-# vim:set ts=2 sw=2 et:
